# jackson-datatype-ecore

./: .bazelproject  .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  maven_lock.json  pom_template.xml
.github/: release.yml
.github/workflows/: ci.yaml  release.yaml
scripts/: bump_version.sh  cat_version.sh  publish.sh  release.sh
src/main/java/com/ottogroup/jackson/ecore/: BUILD  EAnnotationIntrospector.java  EcoreMapper.java  EcoreModule.java  JsonResource.java  JsonResourceFactory.java
src/main/java/com/ottogroup/jackson/ecore/annotation/: BUILD  EAnnotationBridge.java  EJsonAlias.java  EJsonIgnore.java  EJsonRawValue.java  EJsonTypeIdResolver.java  EJsonTypeInfo.java
src/main/java/com/ottogroup/jackson/ecore/deser/: BUILD  EDataTypeDeserializer.java  EDeserializationContext.java  EDeserializationProblemHandler.java  EDeserializerFactory.java  EDeserializers.java  EInstantiators.java  EMapDeserializer.java  EObjectDeserializer.java  EObjectIdResolver.java  RawDeserializer.java  ReadableEObjectId.java  (+3 more)
src/test/java/com/ottogroup/jackson/ecore/: AnnotationTest.java  ArrayTest.java  BUILD  ContainmentTest.java  DynamicTest.java  EcoreTest.java  EnumTest.java  EventTypeIdResolver.java  MapTest.java  PolymorphicTest.java  RawTest.java  ReferenceTest.java  ResourceTest.java  TestSetup.java  TypeResolverTest.java  ValueTest.java
src/test/resources/model/: BUILD  array.xcore  model.xcore
testdata/: BUILD  dynamic.ecore  test-load-types.json  test-proxy-5b.json  test-proxy-6.json  test-proxy-7b.json  test.ecore  test.json
tools/: BUILD  Dummy.java  VanillaXcoreGenerator.java  XcoreJavaGenerator.java  defs.bzl
(+24 files in other folders)
